# infrastructure/src/main/java/com/senac/infrastructure/repository/OwnerRepository.java
@@ -1,0 +1,8 @@
+package com.senac.infrastructure.repository;
+
+import com.senac.infrastructure.entity.Owner;
+import org.springframework.data.elasticsearch.repository.ElasticsearchRepository;
+
+public interface OwnerRepository extends ElasticsearchRepository<Owner, String> {
+    Owner findByUsername(String username);
+}
